libs/slim/test/typecheck/fail/assignment_mismatch.shader
shader vertex {
    int foo;
    foo = 1.5;
    return vec4(0.0, 0.0, 0.0, 1.0);
}
